; ModuleID = '/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dmlab_connect.c_dmlab_read_property.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dmlab_connect.c_dmlab_read_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 (i32, i8*, i8**)* }

@kReservedEnginePropertyList = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"fps\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@EnvCApi_PropertyResult_Success = common dso_local global i32 0, align 4
@EnvCApi_PropertyResult_NotFound = common dso_local global i32 0, align 4
@EnvCApi_PropertyResult_PermissionDenied = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dmlab_read_property(i8* %0, i8* %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8** %2, i8*** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* @kReservedEnginePropertyList, align 4
  %12 = load i32, i32* @kReservedEnginePropertyList, align 4
  %13 = call i32 @strlen(i32 %12)
  %14 = call i64 @strncmp(i8* %10, i32 %11, i32 %13)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %51

16:                                               ; preds = %3
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* @kReservedEnginePropertyList, align 4
  %19 = call i32 @strlen(i32 %18)
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8, i8* %17, i64 %20
  store i8* %21, i8** %8, align 8
  %22 = load i8*, i8** %8, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 0
  %24 = load i8, i8* %23, align 1
  %25 = sext i8 %24 to i32
  %26 = icmp eq i32 %25, 46
  br i1 %26, label %27, label %41

27:                                               ; preds = %16
  %28 = load i8*, i8** %8, align 8
  %29 = getelementptr inbounds i8, i8* %28, i32 1
  store i8* %29, i8** %8, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = call i64 @strcmp(i8* %30, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %27
  %34 = load i8*, i8** %5, align 8
  %35 = call i32 @dmlab_fps(i8* %34)
  %36 = call i8* @va(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %35)
  %37 = load i8**, i8*** %7, align 8
  store i8* %36, i8** %37, align 8
  %38 = load i32, i32* @EnvCApi_PropertyResult_Success, align 4
  store i32 %38, i32* %4, align 4
  br label %64

39:                                               ; preds = %27
  %40 = load i32, i32* @EnvCApi_PropertyResult_NotFound, align 4
  store i32 %40, i32* %4, align 4
  br label %64

41:                                               ; preds = %16
  %42 = load i8*, i8** %8, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 0
  %44 = load i8, i8* %43, align 1
  %45 = sext i8 %44 to i32
  %46 = icmp eq i32 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %41
  %48 = load i32, i32* @EnvCApi_PropertyResult_PermissionDenied, align 4
  store i32 %48, i32* %4, align 4
  br label %64

49:                                               ; preds = %41
  br label %50

50:                                               ; preds = %49
  br label %51

51:                                               ; preds = %50, %3
  %52 = call %struct.TYPE_7__* (...) @dmlab_context()
  store %struct.TYPE_7__* %52, %struct.TYPE_7__** %9, align 8
  %53 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %54 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %53, i32 0, i32 1
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %55, i32 0, i32 0
  %57 = load i32 (i32, i8*, i8**)*, i32 (i32, i8*, i8**)** %56, align 8
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %59 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 8
  %61 = load i8*, i8** %6, align 8
  %62 = load i8**, i8*** %7, align 8
  %63 = call i32 %57(i32 %60, i8* %61, i8** %62)
  store i32 %63, i32* %4, align 4
  br label %64

64:                                               ; preds = %51, %47, %39, %33
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

declare dso_local i64 @strncmp(i8*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i8* @va(i8*, i32) #1

declare dso_local i32 @dmlab_fps(i8*) #1

declare dso_local %struct.TYPE_7__* @dmlab_context(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
